@@ -8,6 +8,12 @@
     <artifactId>cdc-scanner</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>cdc-scanner</name>
+    <description>CDC Check Scanner App</description>
+    <organization>
+        <name>Finappli SAS</name>
+        <url>https://finappli.com</url>
+    </organization>
+    <inceptionYear>2024</inceptionYear>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,12 +24,12 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>21</version>
+            <version>17.0.6</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>21</version>
+            <version>17.0.6</version>
         </dependency>
         <dependency>
             <groupId>org.controlsfx</groupId>
@@ -107,7 +113,11 @@
             <artifactId>javafx-swing</artifactId>
             <version>21.0.1</version>
         </dependency>
-
+        <dependency>
+            <groupId>at.favre.lib</groupId>
+            <artifactId>bcrypt</artifactId>
+            <version>0.10.2</version>
+        </dependency>
 
     </dependencies>
 
@@ -130,9 +140,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
             <plugin>
